--- a/src/stylesheets/_custom.scss
+++ b/src/stylesheets/_custom.scss
@@ -8,7 +8,7 @@ body {
     margin: 2rem auto;
     width: $content-width * 1.14;
     height: $content-height * 1.28;
-    border: 5px solid $primary;
+    border: 5px solid rgb(111, 0, 255);
     border-radius: 50px;
     text-align: center;
     -webkit-box-shadow: 0px 1px 22px -1px rgba(0, 0, 0, 0.31);
@@ -31,6 +31,7 @@ body {
         .App-logo {
           margin-bottom: 1.5rem;
           color: $blue-1;
+         
 
           &>* {
             margin-bottom: 1rem;
