Fix Linter Errors

--- a/src/stylesheets/_color.scss
+++ b/src/stylesheets/_color.scss
@@ -13,8 +13,8 @@ $green-2: #ace9a9;
 $green-3: #c1efbd;
 $green-4: #d5f4d4;
 
-$white-1: #F1F2F3;
-$white-2: #EEEFF1;
+$white-1: #f1f2f3;
+$white-2: #eeeff1;
 $white-3: #efeeee;
 $white-4: #e0e4e4;
 
