--- a/src/stylesheets/utilites/_components.scss
+++ b/src/stylesheets/utilites/_components.scss
@@ -22,11 +22,11 @@ $font-size: $size / 4.5;
   position: relative;
   text-align: center;
 
-  &:before {
+  &::before {
     align-items: center;
     background-color: #fff;
     border-radius: 50%;
-    content: attr(data-progress)'%';
+    content: attr(data-progress) '%';
     display: flex;
     font-size: $font-size;
     justify-content: center;
@@ -35,10 +35,10 @@ $font-size: $size / 4.5;
     right: $circle-width;
     top: $circle-width;
     bottom: $circle-width;
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
   }
 
-  &:after {
+  &::after {
     background-color: $theme-color;
     border-radius: 50%;
     content: '';
@@ -49,7 +49,7 @@ $font-size: $size / 4.5;
 
   &:hover,
   &:focus {
-    &:before {
+    &::before {
       transform: scale(0.9);
     }
   }
@@ -66,9 +66,10 @@ $half: round($loops / 2);
 
 @for $i from 0 through $loops {
   .progress-circle[data-progress="#{$i * $step}"] {
-    &:after {
+    &::after {
       @if $i < $half {
         $next-deg: 90deg + $increment * $i;
+
         background-image:
           linear-gradient(90deg, $back-color 50%, transparent 50%, transparent),
           linear-gradient($next-deg, $theme-color 50%, $back-color 50%, $back-color);
@@ -76,6 +77,7 @@ $half: round($loops / 2);
 
       @else {
         $next-deg: -90deg + $increment * ($i - $half);
+
         background-image:
           linear-gradient($next-deg, $theme-color 50%, transparent 50%, transparent),
           linear-gradient(270deg, $theme-color 50%, $back-color 50%, $back-color);
@@ -110,29 +112,29 @@ $half: round($loops / 2);
 
 @-webkit-keyframes blink {
   0% {
-    opacity: 1.0;
+    opacity: 1;
   }
 
   50% {
-    opacity: 0.0;
+    opacity: 0;
   }
 
   100% {
-    opacity: 1.0;
+    opacity: 1;
   }
 }
 
 @keyframes blink {
   0% {
-    opacity: 1.0;
+    opacity: 1;
   }
 
   50% {
-    opacity: 0.0;
+    opacity: 0;
   }
 
   100% {
-    opacity: 1.0;
+    opacity: 1;
   }
 }
 
